# TGA_Compression

./: CMakeLists.txt  README.md  common.h  compression.c  decompression.c  main.c
src/: img.tga
